jsonschemadsl2ecore.trafo.opt/test/test79/invalidtests/example7.test79
{
	"prop1":true,
	"prop2":1.0,
	"other":1.4343
} 